# ascii-diagram-drawer

./: .gitignore  README.md  jsconfig.json  package-lock.json  package.json
shared/messages/: shape_template.proto
shared/messages/events/: AllShapeCollectionsReloaded.proto  BackendErrorOccurred.proto  ShapeCollectionLoaded.proto
shared/messages/types/: ShapeTemplate.proto
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/res/: default-collection.json
src-tauri/resources/: default-collection.json  drawable-collection-schema.json
src-tauri/resources/default-collection-shapes/: circle.shape
src-tauri/src/: drawable.rs  lib.rs  main.rs  message_utlis.rs  session.rs  shape.rs  shape_template_collections.rs
src/lib/: diagram_editor.svelte  error_bar.svelte  nav_bar.svelte  template_sidebar.svelte
src/lib/stores/: error.ts
src/routes/: +layout.svelte  +page.svelte
src/utils/: communication.ts
