[package]
name = "ascii-diagram-drawer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
include = [
    "src/**",
    "resources/**",
    "Cargo.toml",
    "Cargo.lock"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ascii_diagram_drawer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1.10.1"
svgbob = "0.7.6"
log = "0.4.27"

# communication
prost = "0.13"
prost-types = "0.13"
